Test different colors

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       }
       body {
         margin: 0;
-        background-color: #21252B;
+        background-color: #FFFFFF;
       }
     </style>
   </head>
