--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
       }
       body {
         margin: 0;
-        background-color: #FFFFFF;
+        background-color: #383f47;
       }
     </style>
   </head>
