Create chart of top used food items

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
       }
       body {
         margin: 0;
-        background-color: #383f47;
+        background-color: #22262b;
       }
     </style>
   </head>
